UI Improvements - add dark mode - UI & UX fixes on layout header

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -27,5 +27,5 @@
 
 .devNull {
   font-family: 'JetBrains Mono', Ubuntu Mono, Consolas,Monaco,Andale Mono,monospace;
-  font-size: 13px;
+  font-size: large;
 }
